--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,27 @@ If your plugin does not need CSS, delete this file.
 
 */
 
-.inputKeybind{
+.inputKeybind {
     width: 50px;
+}
+
+.colorInput{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 100;
+}
+
+.axisInput{
+    position: absolute !important;
+    bottom: 10px;
+    right: 10px;
+    z-index: 100;
+}
+
+.gridInput{
+    position: absolute !important;
+    bottom: 10px;
+    right: 30px;
+    z-index: 100;
 }
