--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,7 @@ If your plugin does not need CSS, delete this file.
     right: 30px;
     z-index: 100;
 }
+
+.ThreeDEmbed_Position_Inputs input{
+    width: 30%;
+}
