--- a/styles.css
+++ b/styles.css
@@ -12,15 +12,16 @@ If your plugin does not need CSS, delete this file.
 }
 
 .buttonInput_Reload {
+    font-size: 1rem;
     position: absolute;
-    top: 10px;
+    top: 9px;
     right: 10px;
     z-index: 100;
 }
 
 .buttonInput_Reset {
     position: absolute;
-    top: 8px;
+    top: 9px;
     left: 50px;
     z-index: 100;
 }
