--- a/styles.css
+++ b/styles.css
@@ -106,3 +106,38 @@ input[type="color"]::-webkit-color-swatch {
 .ThreeDEmbed_Position_Inputs input {
     width: 30%;
 }
+
+
+
+
+
+
+
+
+.light-setting {
+    margin-top: 10px;
+    padding: 10px;
+    border: 1px solid var(--background-modifier-border);
+    border-radius: 8px;
+    background-color: var(--background-secondary);
+  }
+  
+  .position-group {
+    display: flex;
+    gap: 5px;
+  }
+  
+  .position-group input {
+    width: 30%;
+  }
+  
+  @media (max-width: 600px) {
+    .position-group {
+      flex-direction: column;
+    }
+  
+    .position-group input {
+      width: 100%;
+    }
+  }
+  
