--- a/styles.css
+++ b/styles.css
@@ -115,11 +115,15 @@ input[type="color"]::-webkit-color-swatch {
 
 
 .light-setting {
-    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 10px;
     border: 1px solid var(--background-modifier-border);
     border-radius: 8px;
     background-color: var(--background-secondary);
+  }
+
+  .light-setting summary, .position-group{
+    margin-bottom: 5px;
   }
   
   .position-group {
