--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,3 @@
-/*
-
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
-
-*/
-
 .inputKeybind {
     width: 50px;
 }
@@ -31,37 +22,24 @@ input[type="color"] {
 
 input[type="color"] {
     border: 2px solid black;
-    /* Adds a black border */
     border-radius: 50%;
-    /* Makes the border circular */
     box-sizing: border-box;
-    /* Ensures padding and border are included in the element's dimensions */
     padding: 0;
-    /* Removes extra padding */
     margin: 0;
-    /* Resets any default margin */
     height: 2em;
-    /* Ensures equal height */
     width: 2em;
-    /* Matches height for a perfect circle */
     -webkit-appearance: none;
-    /* Removes browser-specific styles */
     -moz-appearance: none;
-    /* For Firefox */
     appearance: none;
-    /* General reset for modern browsers */
     cursor: pointer;
-    /* Makes it look interactive */
 }
 
 input[type="color"]::-webkit-color-swatch-wrapper {
     padding: 0;
-    /* Removes padding inside the swatch wrapper */
 }
 
 input[type="color"]::-webkit-color-swatch {
     border: none;
-    /* Removes default border from the swatch itself */
 }
 
 .colorInput {
@@ -69,8 +47,6 @@ input[type="color"]::-webkit-color-swatch {
     top: 10px;
     left: 10px;
     z-index: 100;
-    /*border: solid 1px black !important;*/
-    /*border-radius: 50%;*/
 }
 
 .axisInput {
@@ -107,41 +83,34 @@ input[type="color"]::-webkit-color-swatch {
     width: 30%;
 }
 
-
-
-
-
-
-
-
 .light-setting {
     margin-bottom: 10px;
     padding: 10px;
     border: 1px solid var(--background-modifier-border);
     border-radius: 8px;
     background-color: var(--background-secondary);
-  }
+}
 
-  .light-setting summary, .position-group{
+.light-setting summary,
+.position-group {
     margin-bottom: 5px;
-  }
-  
-  .position-group {
+}
+
+.position-group {
     display: flex;
     gap: 5px;
-  }
-  
-  .position-group input {
+}
+
+.position-group input {
     width: 30%;
-  }
-  
-  @media (max-width: 600px) {
+}
+
+@media (max-width: 600px) {
     .position-group {
-      flex-direction: column;
+        flex-direction: column;
     }
-  
+
     .position-group input {
-      width: 100%;
+        width: 100%;
     }
-  }
-  
+}
