--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,22 @@
     width: 30%;
 }
 
+.json-error-container::before {
+    content: attr(data-error-line);
+    display: block;
+    padding: 7px;
+    background-color: #fff0f0;
+    border: 1px solid #ff4d4d;
+    color: #b71c1c;
+    font-family: var(--font-monospace);
+    font-size: 0.95em;
+    font-weight: 500;
+    padding: 12px 14px;
+    border-radius: 8px;
+    white-space: pre-wrap;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
 .light-setting {
     margin-bottom: 10px;
     padding: 10px;
@@ -83,11 +99,13 @@
     margin-bottom: 5px;
 }
 
-.ThreeD_embed_gridAxis, .ThreeD_embed_radioButton {
+.ThreeD_embed_gridAxis,
+.ThreeD_embed_radioButton {
     width: 100%;
 }
 
-.ThreeD_embed_gridAxis.active, .ThreeD_embed_radioButton.active {
+.ThreeD_embed_gridAxis.active,
+.ThreeD_embed_radioButton.active {
     background-color: green !important;
 }
 
